# search_engine

./: CMakeLists.txt  README.md  answers.json  config.json  main.cpp  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
test/: test_main.cpp
